<resources>
    <string name="app_name">MyWallet</string>

    <!-- fragment titleResId -->
    <string name="create_order_fragment_title">Create order</string>
    <string name="list_order_fragment_title">Order list</string>
    <string name="calendar_fragment_title">Calendar</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="diagram_fragment_title">Statistic</string>

    <string name="toast_detection_was_canceled">Action was cancel</string>

    <!-- textview-->
    <string name="tv_no_categories">No categories</string>
    <string name="tv_pick_a_color">Pick a color</string>
    <string name="tv_category_categories">Categories</string>
    <string name="tv_currency">Currency</string>
    <string name="tv_list_is_empty">List is empty</string>
    <string name="tv_click_to_register">Click to sign up</string>
    <string name="tv_click_forgot_password">Forgot password</string>
    <string name="tv_click_to_log_in">Click to sign in</string>
    <string name="tv_sync">SYNCHRONIZATION</string>
    <string name="tv_getting">Getting:</string>
    <string name="tv_sending">Sending:</string>
    <string name="tv_user_title">User</string>
    <string name="tv_email_settings">E-mail:</string>
    <string name="tv_password_settings">Password:</string>
    <string name="tv_forgot_password">Reset password</string>
    <string name="tv_back_to_login_screen">Back to log in screen</string>
    <string name="tv_email_verification">Email verification</string>
    <string name="tv_email_is_verified">Email is verified</string>
    <string name="tv_email_is_not_verified">Email is not verified</string>

    <!--buttons text-->
    <string name="btn_text_save_order">Save order</string>
    <string name="btn_text_clear_all">Clear all</string>
    <string name="btn_text_yes">Yes</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="btn_text_ok">OK</string>
    <string name="btn_add_category">Add category</string>
    <string name="btn_text_save">Save</string>
    <string name="btn_text_change">Change</string>
    <string name="btn_log_in">Log in</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_sign_out">Sign out</string>
    <string name="btn_save_currency">Save</string>
    <string name="btn_reset_password">Change</string>
    <string name="btn_send_email">Send email</string>
    <string name="btn_verify_email">Verify</string>
    <string name="btn_change_email">Change</string>

    <!-- editText hints-->
    <string name="ed_hint_write_product_name">Write product name</string>
    <string name="ed_hint_enter_price">Enter price</string>
    <string name="ed_hint_enter_title_of_category">Enter title of category</string>
    <string name="ed_hint_enter_currency">Enter a currency</string>
    <string name="ed_hint_email">E-mail</string>
    <string name="ed_hint_password">Password</string>
    <string name='ed_hint_repeat_password'>Repeat password</string>

    <!-- toasts -->
    <string name="t_product_list_is_empty">Product list is already empty</string>
    <string name="t_product_list_cant_be_empty">Product list can\'t be empty</string>
    <string name="t_please_enter_product_name">Please enter product name</string>
    <string name="t_please_enter_product_price">Please enter product price</string>
    <string name="t_please_select_a_category">Select a category</string>
    <string name="t_price_should_be_a_number">Price should be a number</string>
    <string name="t_from_date_cant_be_greater_than_to_date">From date can\'t be greater than to date</string>
    <string name="t_to_date_cant_be_less_than_from_date">To date can\'t be less than from date</string>


    <!-- dialogs -->
    <string name="d_order_title">Order title</string>
    <string name="d_order_title_please_enter">Please enter order title"</string>
    <string name="d_remove_product">Remove product</string>
    <string name="d_remove_product_are_you_sure">"Are sure you to remove product?"</string>
    <string name="d_remove_category">Remove category</string>
    <string name="d_remove_category_are_you_sure">"Are sure you to remove category?"</string>
    <string name="d_remove_order">Remove order</string>
    <string name="d_remove_order_are_you_sure">"Are sure you to remove order?"</string>
    <string name="d_clear_products">Clear all products</string>
    <string name="d_clear_products_are_you_sure">Are you sure to clear all product from list?</string>
    <string name="d_title_no_categories">No category</string>
    <string name="d_msg_no_categories">Please add a one category</string>
    <string name="d_title_max_categories">Max categories</string>
    <string name="d_msg_max_categories">You can have only 10 categories</string>
    <string name="d_msg_check_your_email">Check your email to reset password to your account</string>
    <string name="d_title_check_your_email">Check your email</string>
    <string name="d_title_error_reset">Error</string>
    <string name="d_msg_error_reset">Some error happened, please try again later</string>
    <string name="d_title_email_verification">Email verification</string>
    <string name="d_msg_email_verification">Email verification has been sent</string>
    <string name="d_title_error_email_verification">Email verification error</string>
    <string name="d_msg_error_email_verification">Email verification error, please try again later</string>

    <string name="total">Total:</string>
    <string name="non_set_category">Non set</string>

    <string name="graph_title_category_by_month">Spend money for category by month</string>
    <string name="graph_title_spend_money_for_each_day_in_month">Spend money for each day in month</string>
    <string name="graph_title_growing_line">Growing line graph</string>

    <string name="graph_title_category_by_year">Spend money for category by year</string>
    <string name="graph_title_spend_money_for_each_day_in_year">Spend money for each day in year</string>


    <!--bottom navigation strings -->
    <string name="nav_order_list">Order list</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_graph">Graph</string>
    <string name="nav_settings">Settings</string>

    <!--validations -->
    <string name="email_is_empty">E-mail is empty</string>
    <string name="email_is_invalid">E-mail is not correct</string>

    <string name="password_is_empty">Password is empty</string>
    <string name="password_is_short">Password should contains at least 6 symbols</string>
    <string name="password_should_uppercase">Password should contains one uppercase char</string>
    <string name="password_should_lowercase">Password should contains one lowercase char</string>
    <string name="password_should_number">Password should contains one number</string>
    <string name="password_mismatch">Passwords mismatch</string>

</resources>
