<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@id/orderListFragment">

    <fragment
            android:id="@+id/preferencesFragment"
            android:name="bohdan.sushchak.mywallet.ui.preferences.PreferencesFragment"
            android:label="@string/settings_fragment_title"/>

    <fragment
            android:id="@+id/calendarFragment"
            android:name="bohdan.sushchak.mywallet.ui.calendar.CalendarFragment"
            android:label="@string/calendar_fragment_title"
            tools:layout="@layout/calendar_fragment">
        <argument
                android:name="isStart"
                app:argType="boolean"
                android:defaultValue="true"/>
    </fragment>
    <fragment
            android:id="@+id/createOrderFragment"
            android:name="bohdan.sushchak.mywallet.ui.create_order.CreateOrderFragment"
            android:label="@string/create_order_fragment_title"
            tools:layout="@layout/create_order_fragment">
        <argument
                android:name="isBottomNavigationGone"
                app:argType="boolean"
                android:defaultValue="true"/>
        <argument android:name="order" app:argType="bohdan.sushchak.mywallet.data.db.entity.OrderEntity"
                  app:nullable="true" android:defaultValue="@null"/>
    </fragment>
    <fragment
            android:id="@+id/diagramFragment"
            android:name="bohdan.sushchak.mywallet.ui.graph.GraphFragment"
            android:label="@string/diagram_fragment_title"
            tools:layout="@layout/graph_fragment">
        <argument
                android:name="isStart"
                app:argType="boolean"
                android:defaultValue="true"/>
    </fragment>
    <fragment
            android:id="@+id/orderListFragment"
            android:name="bohdan.sushchak.mywallet.ui.list_orders.OrderListFragment"
            android:label="@string/list_order_fragment_title"
            tools:layout="@layout/order_list_fragment">
        <action
                android:id="@+id/actionCreateOrder"
                app:destination="@+id/createOrderFragment"/>
        <argument
                android:name="isStart"
                app:argType="boolean"
                android:defaultValue="true"/>
        <action
                android:id="@+id/action_orderListFragment_to_settingsFragment"
                app:destination="@id/settingsFragment"/>
    </fragment>

    <fragment
            android:id="@+id/settingsFragment"
            android:name="bohdan.sushchak.mywallet.ui.settings.SettingsFragment"
            android:label="@string/settings_fragment_title"
            tools:layout="@layout/settings_fragment">
        <argument
                android:name="isStart"
                app:argType="boolean"
                android:defaultValue="true"/>
    </fragment>
</navigation>