<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.settings.SettingsFragment">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tvUser"
                    style="@style/TextViewSettingsCategoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_user_title" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                <TextView
                        style="@style/TextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_email_settings" />

                <TextView
                        android:id="@+id/tvUserEmail"
                        style="@style/TextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColorGray"
                        android:textStyle="normal" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <Button
                            android:id="@+id/btnChangeEmail"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:layout_marginEnd="15dp"
                            android:text="@string/btn_change_email" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                <TextView
                        style="@style/TextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_password_settings" />

                <TextView
                        android:id="@+id/tvUserPassword"
                        style="@style/TextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="**********"
                        android:textColor="@color/textColorGray"
                        android:textStyle="normal" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <Button
                            android:id="@+id/btnChangePassword"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:layout_marginEnd="15dp"
                            android:text="@string/btn_reset_password" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                <TextView
                        style="@style/TextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_email_verification" />

                <TextView
                        android:id="@+id/tvEmailVerification"
                        style="@style/TextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColorGray"
                        android:textStyle="normal" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <Button
                            android:id="@+id/btnVerifyEmail"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center_vertical"
                            android:layout_marginEnd="15dp"
                            android:text="@string/btn_verify_email" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/btnSignOut"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="15dp"
                        android:text="@string/btn_sign_out" />
            </LinearLayout>


            <View style="@style/ViewSeparator" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_categories"
                    style="@style/TextViewSettingsCategoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_category_categories" />

            <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                <TextView
                        android:id="@+id/tvNoCategories"
                        style="@style/TextViewStyleListIsEmpty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewCategory"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="#fff"
                        tools:listitem="@layout/category_item_spinner" />

            </FrameLayout>

            <Button
                    android:id="@+id/btnAddCategory"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/btn_add_category" />

            <View style="@style/ViewSeparator" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_currency"
                    style="@style/TextViewSettingsCategoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_currency" />

            <EditText
                    android:id="@+id/edCurrency"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:background="#fff"
                    android:hint="@string/ed_hint_enter_currency"
                    android:inputType="text"
                    android:maxLength="5"
                    android:maxLines="1" />

            <Button
                    android:id="@+id/btnSaveCurrency"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/btn_save_currency" />

            <View style="@style/ViewSeparator" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>