<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="280dp"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        android:paddingBottom="10dp">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24px"
            app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/ed_hint_password"
                android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etRepeatPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24px"
            app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRepeatPassword"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/ed_hint_repeat_password"
                android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btnCancel"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/btn_text_cancel" />

        <Button
                android:id="@+id/btnChange"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/btn_text_change" />
    </LinearLayout>
</LinearLayout>
