<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight">

        <LinearLayout
                android:id="@+id/logoLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="40dp"
                    android:src="@drawable/oval_logo_login"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="ContentDescription" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="38sp"
                    android:textStyle="bold" />
        </LinearLayout>

        <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/tv_forgot_password"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoLayout" />

        <androidx.cardview.widget.CardView
                android:id="@+id/cardLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="#ffffff"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="30dp"
                    android:paddingBottom="35dp">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etEmailLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            style="@style/EditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/ed_hint_email"
                            android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
                android:id="@+id/btnSendEmail"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:text="@string/btn_send_email"
                app:layout_constraintEnd_toEndOf="@+id/cardLogin"
                app:layout_constraintStart_toStartOf="@+id/cardLogin"
                app:layout_constraintTop_toBottomOf="@+id/cardLogin" />

        <ProgressBar
                android:id="@+id/progressBar_loading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:indeterminate="true"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSendEmail"
                app:layout_constraintVertical_bias="0.5" />

        <TextView
                android:id="@+id/tvClickBackLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:text="@string/tv_back_to_login_screen"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar_loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>